Project

General

Profile

Actions

Bug #21002

closed

set option "mon_pool_quota_warn_threshold && mon_pool_quota_crit_threshold" fail

Added by huanwen ren over 6 years ago. Updated over 6 years ago.

Status:
Closed
Priority:
Normal
Assignee:
-
Category:
-
Target version:
% Done:

0%

Source:
Tags:
Backport:
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(FS):
Labels (FS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

err:

[root@node181 ~]# ceph daemon mon.node181 config set mon_pool_quota_warn_threshold 0.8 
{
    "error": "error setting 'mon_pool_quota_warn_threshold' to '0.8': (22) Invalid argument" 
}


[root@node181 ~]# ceph daemon mon.node181 config set mon_pool_quota_crit_threshold 0.9 {
"error": "error setting 'mon_pool_quota_crit_threshold' to '0.9': (22) Invalid argument"
}

Actions #1

Updated by huanwen ren over 6 years ago

[root@node181 ~]# ceph daemon mon.node181 config set mon_pool_quota_crit_threshold 0.9
{
    "error": "error setting 'mon_pool_quota_crit_threshold' to '0.9': (22) Invalid argument" 
}
Actions #2

Updated by huanwen ren over 6 years ago

please close it
no err

Actions #3

Updated by xie xingguo over 6 years ago

  • Status changed from New to Closed
Actions

Also available in: Atom PDF