mon/pgmap: Fixed setting quota threshold

set option "mon_pool_quota_warn_threshold && mon_pool_quota_crit_threshold" fail
Fixes: http://tracker.ceph.com/issues/21002

Signed-off-by: huanwen ren ren.huanwen@zte.com.cn